--- a/public/navigation/personal_trainer.html
+++ b/public/navigation/personal_trainer.html
@@ -434,7 +434,7 @@
                 </div>
                 <div class="image__slider">
                     <div class="image__item">
-                        <div class="image">
+                        <div class="image-img">
                             <img src="/img/personal-trainer/hlv/quyen.png" alt="" />
                         </div>
                         <div class="information-bar">
@@ -450,7 +450,7 @@
                         </div>
                     </div>
                     <div class="image__item">
-                        <div class="image">
+                        <div class="image-img">
                             <img src="/img/personal-trainer/hlv/tien.png" alt="" />
                         </div>
                         <div class="information-bar">
@@ -466,7 +466,7 @@
                         </div>
                     </div>
                     <div class="image__item">
-                        <div class="image">
+                        <div class="image-img">
                             <img src="/img/personal-trainer/hlv/tu.png" alt="" />
                         </div>
                         <div class="information-bar">
@@ -482,7 +482,7 @@
                         </div>
                     </div>
                     <div class="image__item">
-                        <div class="image">
+                        <div class="image-img">
                             <img src="/img/personal-trainer/hlv/truong.png" alt="" />
                         </div>
                         <div class="information-bar">
@@ -498,7 +498,7 @@
                         </div>
                     </div>
                     <div class="image__item">
-                        <div class="image">
+                        <div class="image-img">
                             <img src="/img/personal-trainer/hlv/van.png" alt="" />
                         </div>
                         <div class="information-bar">
