--- a/public/navigation/chatbox.html
+++ b/public/navigation/chatbox.html
@@ -221,7 +221,7 @@
                         </div>
                     </div>
                     <div class="chatbox__bottom__send">
-                        <i class='bx bxs-send'></i>
+                        <ion-icon name="send"></ion-icon>
                     </div>
                 </div>
 
@@ -538,6 +538,8 @@
         </div>
     </div>
     <div class="nen_mo"></div>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="/socket.io/socket.io.js"></script>
 
     <script type="module" src="../src/toast.js"></script>
