--- a/public/admin.html
+++ b/public/admin.html
@@ -494,6 +494,7 @@
                                             <th class="th__show" style="width: 12%">ẢNH PHỤ</th>
                                             <th class="th__show" style="width: 8%">MÃ SẢN PHẨM</th>
                                             <th class="th__show" style="width: 15%">TÊN SẢN PHẨM</th>
+                                            <th class="th__show" style="width: 8%">LOẠI</th>
                                             <th class="th__show" style="width: 10%">GIÁ</th>
                                             <th class="th__show" >MÔ TẢ</th>
                                             <th class="th__show" style="width: 6%">THAO TÁC</th>
