--- a/public/admin.html
+++ b/public/admin.html
@@ -1129,7 +1129,7 @@
                 </form>
             </div>
             <div class="modal__body__box modal__body__box--admin admin-remove-account">
-                <div id="form-edit-calendar" class="form2">
+                <div id="form-remove-account" class="form2">
                     <div class="row__title__table">
                         <div class="row__title__table__content">
                             Xóa tài khoản
@@ -1237,8 +1237,6 @@
                     </div>
                 </div>
             </div>
-
-            
             <div class="modal__body__box modal__body__box--admin admin-add-product">
                 <form id="form-add-product" class="form2">
                     <div class="row__title__table">
@@ -1313,6 +1311,42 @@
                         </div>
                     </div>
                 </form>
+            </div>
+            <div class="modal__body__box modal__body__box--admin admin-remove-product">
+                <div id="form-remove-product" class="form2">
+                    <div class="row__title__table">
+                        <div class="row__title__table__content">
+                            Xóa sản phẩm
+                        </div>
+                        <div class="x__cancel">
+                            <i class="fa-regular fa-circle-xmark"></i>
+                        </div>
+                    </div>
+                    <div class="row row__remove">
+                        <div class="row__title">
+                            Mã sản phẩm:
+                        </div>
+                        <div class="row__title row__title2 row__title-ID"></div>
+                    </div>
+
+                    <div class="row row__remove">
+                        <div class="row__title">
+                            Tên sản phẩm:
+                        </div>
+                        <div class="row__title row__title2">
+
+                        </div>
+                    </div>
+                    
+                    <span class="row__note">Chú ý: Hành động không thể khôi phục</span>
+                    <div class="row__final">
+                        <div class="row__final__button">
+                            <button class="button__form" type="">
+                                Xóa
+                            </button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
